Bug 461946 Replace nsIUrlListenerManager by an nsTObserverArray. r/sr=bienvenu